--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,16 @@ body {
   line-height: 1.6;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #8b1a1a; /* your brand red */
+  text-decoration: underline;
+}
+
 img {
   max-width: 100%;
   display: block;
